--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -35,6 +35,23 @@
                 android:layout_margin="16dp"
                 android:elevation="10dp">
             </android.support.v7.widget.RecyclerView>
+
+            <RelativeLayout
+                android:layout_width="match_parent"
+                android:layout_height="wrap_content"
+                android:layout_alignEnd="@+id/recyclerView"
+                android:layout_alignParentTop="true"
+                android:layout_alignRight="@+id/recyclerView"
+                android:layout_marginTop="480dp"
+                android:layout_weight="1">
+
+                <android.support.v7.widget.RecyclerView
+                    android:id="@+id/recyclerView3"
+                    android:layout_width="match_parent"
+                    android:layout_height="match_parent"
+                    android:layout_margin="16dp"
+                    android:elevation="10dp"></android.support.v7.widget.RecyclerView>
+            </RelativeLayout>
         </RelativeLayout>
         <TextView
             android:layout_width="wrap_content"
@@ -91,20 +108,6 @@
             android:textColor="#ffffff"
             android:fontFamily="cursive"/>
 
-
-        <RelativeLayout
-            android:layout_width="match_parent"
-            android:layout_height="wrap_content"
-            android:layout_weight="1">
-
-            <android.support.v7.widget.RecyclerView
-                android:id="@+id/recyclerView3"
-                android:layout_width="match_parent"
-                android:layout_height="match_parent"
-                android:layout_margin="16dp"
-                android:elevation="10dp">
-            </android.support.v7.widget.RecyclerView>
-        </RelativeLayout>
 
         <android.support.design.widget.BottomNavigationView
             android:layout_width="match_parent"
